# odom_tester

./: .gitignore  README.md  todo.md
archive/20260708-m1-square-cw-5loops-baseline/: analysis.md  precursor_square_cw_1loop_0p5m.csv  square_cw_5loops_1m.csv
archive/20260709-m1-square-cw-5loops-tight-tol/: analysis.md  fused.tum  square_cw_5loops_1m_tighttol.csv  swerve.tum
archive/20260709-m4-square-cw-baseline-uncalibrated/: analysis.md  m4_square_cw_5loops.csv  m4_square_cw_5loops_mcl.tum  m4_square_cw_5loops_odom_a.tum  m4_square_cw_5loops_odom_b.tum
conclusion/: README.md  method-1-conclusion.md
docs/: measurement-strategy-roadmap.md  method-1-relative-comparison.md  method-4-mcl-reference.md
odom_compare/: package.xml  setup.cfg  setup.py
odom_compare/odom_compare/: odom_compare_node.py
odom_mcl/: package.xml  setup.cfg  setup.py
odom_mcl/odom_mcl/: odom_mcl_node.py
odom_test_core/: package.xml  setup.cfg  setup.py
odom_test_core/odom_test_core/: pose_utils.py  primitives.py  recorder.py
odom_test_interfaces/: CMakeLists.txt  package.xml
odom_test_interfaces/action/: RunTest.action
odom_test_interfaces/srv/: ListTests.srv
odom_tester/: CMakeLists.txt  package.xml
odom_tester_bringup/: CMakeLists.txt  package.xml
odom_tester_bringup/config/: method1.yaml  method4.yaml
odom_tester_bringup/launch/: method1.launch.py  method4.launch.py
scripts/: analyze_method1.py  analyze_method4.py  run_evo.py
